--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>ros_logger</name>
+  <name>ros_system</name>
   <version>0.1.0</version>
-  <description>The ros_logger package</description>
+  <description>The ros_system package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
