--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ find_package(catkin REQUIRED
 add_service_files(
   FILES
   Json.srv
+  MotorStates.srv
 )
 
 ## Generate actions in the 'action' folder
